# temperature-sensor

./: .gitignore  README.md  pyproject.toml  temp_sensor.py
docs/circuit_diagram/: netlist.txt  tmp36_to92.fzz
sketches/basic_no_shutoff/: basic_no_shutoff.ino
